sql/wsrep_sst.cc
@@ -576,12 +576,74 @@ static int sst_append_data_dir(wsp::env& env, const char* data_dir)
   return -env.error();
 }
 
+static int estimate_cmd_len (bool* extra_args)
+{
+  /*
+    The length of the area reserved for the control parameters
+    of the SST script (excluding the copying of the original
+    mysqld arguments):
+  */
+  int cmd_len= 4096;
+  bool extra= false;
+  /*
+    If mysqld was started with arguments, add them all:
+  */
+  if (orig_argc > 1)
+  {
+    int i;
+    for (i = 1; i < orig_argc; i++)
+    {
+      cmd_len += strlen(orig_argv[i]);
+    }
+    extra = true;
+    cmd_len += strlen(WSREP_SST_OPT_MYSQLD);
+    /*
+      Add the separating spaces between arguments,
+      and one additional space before "--mysqld-args":
+    */
+    cmd_len += orig_argc;
+  }
+  *extra_args= extra;
+  return cmd_len;
+}
+
+static void copy_orig_argv (char* cmd_str)
+{
+  /*
+     If mysqld was started with arguments, copy them all:
+  */
+  if (orig_argc > 1)
+  {
+    int i;
+    size_t n;
+    *cmd_str++ = ' ';
+    n = strlen(WSREP_SST_OPT_MYSQLD);
+    memcpy(cmd_str, WSREP_SST_OPT_MYSQLD, n * sizeof(char));
+    cmd_str += n;
+    for (i = 1; i < orig_argc; i++)
+    {
+      char* arg= orig_argv[i];
+      *cmd_str++ = ' ';
+      n = strlen(arg);
+      memcpy(cmd_str, arg, n * sizeof(char));
+      cmd_str += n;
+    }
+    /*
+      Add a terminating null character (not counted in the length,
+      since we've overwritten the original null character which
+      was previously added by snprintf:
+    */
+    *cmd_str = 0;
+  }
+}
+
 static ssize_t sst_prepare_other (const char*  method,
                                   const char*  sst_auth,
                                   const char*  addr_in,
                                   const char** addr_out)
 {
-  int const cmd_len= 4096;
+  bool extra_args;
+  int const cmd_len= estimate_cmd_len(&extra_args);
   wsp::string cmd_str(cmd_len);
 
   if (!cmd_str())
@@ -636,6 +698,9 @@ static ssize_t sst_prepare_other (const char*  method,
     WSREP_ERROR("sst_prepare_other(): snprintf() failed: %d", ret);
     return (ret < 0 ? ret : -EMSGSIZE);
   }
+
+  if (extra_args)
+    copy_orig_argv(cmd_str() + ret);
 
   wsp::env env(NULL);
   if (env.error())
@@ -890,7 +955,8 @@ static int sst_donate_mysqldump (const char*         addr,
   }
   memcpy(host, address.get_address(), address.get_address_len());
   int port= address.get_port();
-  int const cmd_len= 4096;
+  bool extra_args;
+  int const cmd_len= estimate_cmd_len(&extra_args);
   wsp::string  cmd_str(cmd_len);
 
   if (!cmd_str())
@@ -932,6 +998,9 @@ static int sst_donate_mysqldump (const char*         addr,
     WSREP_ERROR("sst_donate_mysqldump(): snprintf() failed: %d", ret);
     return (ret < 0 ? ret : -EMSGSIZE);
   }
+
+  if (extra_args)
+    copy_orig_argv(cmd_str() + ret);
 
   WSREP_DEBUG("Running: '%s'", cmd_str());
 
@@ -1283,7 +1352,8 @@ static int sst_donate_other (const char*        method,
                              bool               bypass,
                              char**             env) // carries auth info
 {
-  int const cmd_len= 4096;
+  bool extra_args;
+  int const cmd_len= estimate_cmd_len(&extra_args);
   wsp::string  cmd_str(cmd_len);
 
   if (!cmd_str())
@@ -1344,6 +1414,9 @@ static int sst_donate_other (const char*        method,
     WSREP_ERROR("sst_donate_other(): snprintf() failed: %d", ret);
     return (ret < 0 ? ret : -EMSGSIZE);
   }
+
+  if (extra_args)
+    copy_orig_argv(cmd_str() + ret);
 
   if (!bypass && wsrep_sst_donor_rejects_queries) sst_reject_queries(FALSE);
 
